--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4501",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 4500"
   },
   "dependencies": {
-    "bootswatch": "4.6.0",
     "next": "10.0.7",
     "nprogress": "0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "4.2.0",
     "styled-components": "5.2.1"
   }
 }
