--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start -p 4500"
   },
   "dependencies": {
+    "firebase": "8.2.9",
+    "firebase-admin": "9.5.0",
     "next": "10.0.7",
     "nprogress": "0.2.0",
     "react": "17.0.1",
