--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reclamos",
   "version": "0.1.0",
+  "author": "fom78",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4501",
