--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start -p 4500"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.1.0",
     "firebase": "8.2.9",
     "firebase-admin": "9.5.0",
     "next": "10.0.7",
