--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "styled-components": "5.2.1"
+  },
+  "devDependencies": {
+    "standard": "16.0.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
