--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,1 @@
-NEXT_PUBLIC_FIREBASE_CONFIG="{
-  apiKey: "AIzaSyCMZaxpuyP7bAQ-0T7h8yDN06dKzShixeQ",
-  authDomain: "reclamos-8b620.firebaseapp.com",
-  projectId: "reclamos-8b620",
-  storageBucket: "reclamos-8b620.appspot.com",
-  messagingSenderId: "977920751989",
-  appId: "1:977920751989:web:68fb490037e0f01e217b3c"
-}"
+NEXT_PUBLIC_FIREBASE_CONFIG="{"apiKey":"AIzaSyCMZaxpuyP7bAQ-0T7h8yDN06dKzShixeQ","authDomain":"reclamos-8b620.firebaseapp.com","projectId":"reclamos-8b620","storageBucket":"reclamos-8b620.appspot.com","messagingSenderId":"977920751989","appId":"1:977920751989:web:68fb490037e0f01e217b3c"}"
